--- a/package.json
+++ b/package.json
@@ -1,28 +1,12 @@
 {
   "name": "timelang",
-  "version": "0.5.1",
-  "description": "Parse natural language time expressions into structured data",
+  "private": true,
+  "description": "Natural language time expression parser monorepo",
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "npm run compile:grammar && tsup",
-    "compile:grammar": "nearleyc src/grammar.ne -o src/grammar.ts && { echo '// @ts-nocheck'; cat src/grammar.ts; } > tmp && mv tmp src/grammar.ts",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run build"
+    "build": "pnpm -r build",
+    "test": "pnpm -r test",
+    "typecheck": "pnpm -r typecheck"
   },
   "keywords": [
     "date",
@@ -36,18 +20,8 @@
   ],
   "author": "",
   "license": "MIT",
-  "dependencies": {
-    "moo": "^0.5.2",
-    "nearley": "^2.20.1"
-  },
   "devDependencies": {
-    "@types/moo": "^0.5.9",
-    "@types/nearley": "^2.11.5",
-    "@types/node": "^22.10.5",
-    "@vitest/coverage-v8": "^2.1.9",
     "prettier": "^3.7.4",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.3",
-    "vitest": "^2.1.8"
+    "typescript": "^5.7.3"
   }
 }
